Fix spacing

--- a/app/assets/stylesheets/campaigns.css.scss
+++ b/app/assets/stylesheets/campaigns.css.scss
@@ -99,6 +99,8 @@ hr {
   margin: 0 5px 20px;
 }
 
-.fa {
+.fa-bar-char-o,
+.fa-pencil,
+.fa-trash-o {
   margin: 0 0 0 5px;
 }
